[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/popups/PopupHelp.tscn" type="PackedScene" id=1]
[ext_resource path="res://res/Assets/Popup/Menu/Sair.png" type="Texture" id=2]
[ext_resource path="res://res/popups/menu_button_popup.gd" type="Script" id=3]
[ext_resource path="res://res/Assets/Buttons/Sair.png" type="Texture" id=4]
[ext_resource path="res://res/buttons/ToggleButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://res/buttons/ToggleButtonSound.tscn" type="PackedScene" id=6]
[ext_resource path="res://res/Assets/Popup/Menu/Window.png" type="Texture" id=7]
[ext_resource path="res://res/Assets/Popup/Menu/Ajuda.png" type="Texture" id=8]
[ext_resource path="res://res/Assets/Popup/Menu/Som.png" type="Texture" id=9]
[ext_resource path="res://res/Assets/Popup/Menu/MÃºsica.png" type="Texture" id=10]
[ext_resource path="res://res/popups/LeavePopup.tscn" type="PackedScene" id=11]

[node name="MenuButtonPopUp" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.794
margin_right = 0.793945
color = Color( 0.2, 0.2, 0.2, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 566.0
margin_top = 305.0
margin_right = 1389.0
margin_bottom = 823.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="."]
margin_left = 1260.0
margin_top = 339.0
margin_right = 1314.0
margin_bottom = 394.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 712.0
margin_top = 387.0
margin_right = 1228.0
margin_bottom = 693.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 516.0
margin_bottom = 333.0
size_flags_horizontal = 3
custom_constants/separation = 28

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 516.0
margin_bottom = 60.0
size_flags_vertical = 3
custom_constants/separation = 80

[node name="CenterContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 215.0
margin_bottom = 60.0
rect_min_size = Vector2( 215, 0 )
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer2/CenterContainer2"]
margin_top = 2.0
margin_right = 215.0
margin_bottom = 57.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 295.0
margin_right = 505.0
margin_bottom = 60.0
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
margin_right = 210.0
margin_bottom = 60.5

[node name="Toggle" parent="HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/CenterContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 210.0
margin_bottom = 60.5
rect_min_size = Vector2( 210, 60.5 )
focus_mode = 0
enabled_focus_mode = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 516.0
margin_bottom = 169.0
rect_min_size = Vector2( 0, 81 )
custom_constants/separation = 80

[node name="CenterContainer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 215.0
margin_bottom = 81.0
rect_min_size = Vector2( 215, 0 )
alignment = 1

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer3/CenterContainer2"]
margin_top = 15.0
margin_right = 215.0
margin_bottom = 65.0
texture = ExtResource( 9 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 295.0
margin_right = 505.0
margin_bottom = 81.0
alignment = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer"]
margin_right = 210.0
margin_bottom = 81.0

[node name="ToggleSound" parent="HBoxContainer/VBoxContainer/HBoxContainer3/HBoxContainer/CenterContainer" instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 10.0
margin_right = 210.0
margin_bottom = 70.5
rect_min_size = Vector2( 210, 60.5 )
focus_mode = 0
enabled_focus_mode = 0

[node name="HBoxContainer4" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 516.0
margin_bottom = 333.0
size_flags_vertical = 3

[node name="HelpButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_right = 256.0
margin_bottom = 136.0
texture_normal = ExtResource( 8 )

[node name="LeaveButton" type="TextureButton" parent="HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 260.0
margin_right = 516.0
margin_bottom = 136.0
texture_normal = ExtResource( 2 )

[node name="PopupHelp" parent="." instance=ExtResource( 1 )]
visible = false
margin_left = 530.0
margin_top = 284.0
margin_right = 1425.0
margin_bottom = 844.0

[node name="LeavePopup" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer4/HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer4/LeaveButton" to="." method="_on_LeaveButton_pressed"]
